--- a/FRONT/src/assets/locales/en.json
+++ b/FRONT/src/assets/locales/en.json
@@ -1,11 +1,9 @@
 {
     "exploreExtraordinary": "Explore the extraordinary: where dreams<br> come to life!",
-    "enjoyMoments": "Don't hesitate! Indulge yourself in a timeless moment at the future's carnival and immerse in a day of joy, discovery, and unforgettable experiences!",
+    "enjoyMoments": "Don't hesitate! Indulge yourself in a timeless moment at the future's carnival and<br> immerse in a day of joy, discovery, and unforgettable experiences!",
     "ticketButton": "Get Tickets",
     "welcomeBelforaine": "Welcome to Belforaine, the paradise of the future!",
     "futureMagic": "Discover a world where electrifying LANs, breathtaking virtual reality adventures, inspiring conferences, and endless entertainment merge. Dive into the magic that the future holds, all in one destination. Belforaine, where the future becomes reality, and pleasure is infinite!",
     "learnMoreButton": "Learn More",
-    "ridesExperience": "More than just rides, an experience that spins magic infinitely!",
-    "moreInfoButton": "More Information"
-    
+    "ridesExperience": "More than just rides, an experience <br> <span style=\"color:#553C65\"> that spins magic infinitely!</span>"    
   }
