Edition de la traduction

--- a/FRONT/src/assets/locales/en.json
+++ b/FRONT/src/assets/locales/en.json
@@ -5,5 +5,13 @@
     "welcomeBelforaine": "Welcome to Belforaine, the paradise of the future!",
     "futureMagic": "Discover a world where electrifying LANs, breathtaking virtual reality adventures, inspiring conferences, and endless entertainment merge. Dive into the magic that the future holds, all in one destination. Belforaine, where the future becomes reality, and pleasure is infinite!",
     "learnMoreButton": "Learn More",
-    "ridesExperience": "More than just rides, an experience <br> <span style=\"color:#553C65\"> that spins magic infinitely!</span>"    
+    "ridesExperience": "More than just rides, an experience <br> <span style=\"color:#553C65\"> that spins magic infinitely!</span>",
+    "titlepartners": "Our Partners",
+    "research": "Search",
+    "defaultCategory": "Category",
+    "attraction": "Ride",
+    "animation": "Animator",
+    "caterer": "Caterer",
+    "profile": "Check the profile"
+
   }
