--- a/FRONT/src/assets/locales/fr.json
+++ b/FRONT/src/assets/locales/fr.json
@@ -6,9 +6,9 @@
     "futureMagic": "Découvrez un monde où LANs survoltés, aventures en réalité virtuelle époustouflantes, conférences inspirantes et divertissement sans fin fusionnent. Plongez dans la magie que nous réserve le futur, le tout dans une seule destination. Belforaine, où le futur devient réalité, et le plaisir est infini !",
     "learnMoreButton": "Plus d'information",
     "ridesExperience": "Plus que des manèges, une expérience qui tourne la magie à l'infini !",
-    "partners": "Nos partenaires",
+    "titlepartners": "Nos partenaires",
     "research": "Rechercher",
-    "Defaultcategory": "Catégorie",
+    "defaultCategory": "Catégorie",
     "attraction": "Attraction",
     "animation": "Animateur",
     "caterer": "Traiteur",
