Modifications de quelques petits détails de la trad
Tout est fonctionnel de mon côté

--- a/FRONT/src/assets/locales/fr.json
+++ b/FRONT/src/assets/locales/fr.json
@@ -134,7 +134,8 @@
           "december": "Décembre"
         }
       },
-      "validThe": "Valide le "
+      "validThe": "Valide le ",
+      "Subtotal": "Sous-total"
     },
 
 
