--- a/FRONT/src/assets/locales/fr.json
+++ b/FRONT/src/assets/locales/fr.json
@@ -178,8 +178,36 @@
         "ticketsPreview": "Aperçu des billets",
         "ticketNumber": "Numéro de billet"
       }
+    },
+
+
+    "organisateursPage": {
+      "title": "Organisateurs",
+      "subtitle": "Découvrez les têtes pensantes du projet Belforaine !",
+      "storytime": {
+        "p1": "Au cœur du Territoire de Belfort, au sein de la magnifique région Bourgogne-Franche-Comté, émerge un phénomène exceptionnel : Belforaine. L'idée audacieuse de ce parc d'attraction éphémère germa dans l'esprit visionnaire d'un groupe de cinq entrepreneurs locaux, passionnés par l'innovation et le divertissement. Inspirés par la richesse culturelle et historique de la région, ils rêvaient de créer une expérience immersive qui allie le passé et le futur, mettant en valeur le patrimoine tout en embrassant les avancées technologiques les plus récentes.",
+        "p2": "Mais Belforaine ne se limite pas à l'amusement. Il sert également de plateforme pour les esprits brillants du domaine de l'informatique. Le parc accueille des conférences de pointe, des LAN parties frénétiques et des discussions animées avec les plus grands esprits du monde des affaires. Des entrepreneurs renommés, des businessmen et businesswomen éminents partagent leurs visions du futur numérique, créant un espace où l'innovation se mêle au divertissement de manière harmonieuse.",
+        "p3": "Ainsi, Belforaine est né de l'union entre la tradition et la modernité, créant un espace éphémère où les visiteurs peuvent s'immerger dans un monde où l'histoire rencontre l'avenir, où la technologie repousse les limites et où l'amusement va de pair avec l'apprentissage. Bien plus qu'un simple parc d'attraction, Belforaine est devenu une expérience culturelle incontournable, laissant une empreinte indélébile dans le paysage du divertissement contemporain."
+      },
+      "bigText": "La TeamForaine",
+      "organisateurs": [
+        {
+          "message": "Back-end et front-end developer du projet, j'ai travaillé sur le design et les fonctionnalités, l'API et la sécurisation du site"
+        },
+        {
+          "message": "Back-end et front-end developer du projet, j'ai travaillé sur l'implémentation de la MAP 3D en ThreeJS"
+        },
+        {
+          "message": "Back-end et front-end developer du projet, j'ai travaillé sur l'implémentation des fonctionnalités, la sécurité et le design"
+        },
+        {
+          "message": "Back-end developer du projet, j'ai travaillé sur la base de données et l'API"
+        },
+        {
+          "message": "Majoritairement front-end developer et SCRUM master, j'ai travaillé sur le design et les fonctionnalités du site ainsi que la gestion du projet"
+        }
+      ]
     }
-    
 
 
 }
