Quelques trads oubliées mais finito

--- a/FRONT/src/assets/locales/en.json
+++ b/FRONT/src/assets/locales/en.json
@@ -206,7 +206,8 @@
         {
           "message": "Mainly front-end developer and SCRUM master, I worked on the design and functionalities of the site as well as the project management"
         }
-      ]
+      ],
+      "buttonContact": "Contact me"
     }
 
   }
