--- a/FRONT/src/assets/locales/fr.json
+++ b/FRONT/src/assets/locales/fr.json
@@ -206,7 +206,8 @@
         {
           "message": "Majoritairement front-end developer et SCRUM master, j'ai travaillé sur le design et les fonctionnalités du site ainsi que la gestion du projet"
         }
-      ]
+      ],
+      "buttonContact": "Contacter"
     }
 
 
