Prochaine fois modifie les json Enzozo

--- a/FRONT/src/assets/locales/en.json
+++ b/FRONT/src/assets/locales/en.json
@@ -77,7 +77,7 @@
 
     "navbar": {
       "home": "Home",
-      "restaurant": "Catering",
+      "reservation": "Book Now",
       "shop": "Shop",
       "tickets": "Ticketing",
       "organizers": "Organizers"
