--- a/FRONT/src/assets/locales/fr.json
+++ b/FRONT/src/assets/locales/fr.json
@@ -76,7 +76,7 @@
 
     "navbar": {
       "home": "Accueil",
-      "restaurant": "Restauration",
+      "reservation": "Réserver",
       "shop": "Boutique",
       "tickets": "Billetterie",
       "organizers": "Organisateurs"
